add resume tables for MRU and MRUA sections

--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -372,7 +372,37 @@
                     <div  class="center">$$ \text{tg } \alpha = \frac{x(t_1) - x_0}{t_1} = v_{\text{media}}$$</div>
                     <div class="right" id="[1.26]">[1.26]</div>
                 </div>
-                </p>
+                <h4>Resumen de ecuaciones del MRU</h4>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Magnitud</th>
+                            <th>Ecuación</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><strong>Vector de posición:</strong></td>
+                            <td>\( \vec{r}(t) = \vec{r}_0 + \vec{v} \; t \)</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Posición (escalar):</strong></td>
+                            <td>\( x(t) = x_0 + v t \)</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Velocidad:</strong></td>
+                            <td>\( v = \text{cte} \)</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Desplazamiento:</strong></td>
+                            <td>\( \Delta x = v \Delta t,\; \Delta s = v \Delta t \)</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Diagrama x-t:</strong></td>
+                            <td>Pendiente \( = v \) (recta: \( x = x_0 + v t \))</td>
+                        </tr>
+                    </tbody>
+                </table>
             </section>
             <section><h3>1.6.2 Movimiento Rectilíneo Uniformemente Acelerado</h3>
                 <p>Se llama <strong>rectilíneo y uniformemente acelerado (MRUA)</strong> a aquel movimiento que no tiene aceleración normal y su aceleración tangencial es constante. </p>
@@ -413,7 +443,30 @@
 				    <div class="center">$$ \text{tg } \alpha = \frac{dx}{dt} = v_{\text{instantánea}} $$</div>
 				    <div class="right" id="[1.34]">[1.34]</div>
 				</div>
-            </section>
+                    <h4>Resumen de ecuaciones del MRUA</h4>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Magnitud</th>
+                                <th>Ecuación</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><strong>Aceleración:</strong></td>
+                                <td>\( a = \text{cte} \)</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Velocidad:</strong></td>
+                                <td>\( v(t) = v_0 + a t \)</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Posición:</strong></td>
+                                <td>\( x(t) = x_0 + v_0 t + \tfrac{1}{2} a t^2 \)</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
             <section><h3>1.6.3 Movimiento Circular Uniforme (MCU)</h3>
                 <p>El Movimiento Circular Uniforme (MCU) describe el movimiento de un objeto que se desplaza en una trayectoria circular a una <strong>rapidez constante</strong>. Para entender cómo llegamos a la ecuación que define su posición en cualquier momento, partimos de las características clave de su aceleración.</p>
                 <h4><u>Las Aceleraciones en el MCU</u></h4>
