section 'composición de movimientos' added

--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -28,7 +28,8 @@
             <li><a href="#Ejercicios de cinemática">2. Ejercicios de cinemática</a></li>
         </ul>
         <article><header><h2 id="Teoría">1. Teoría y Conceptos Clave</h2></header>
-            <section><h3>1.1 Introducción</h3>
+            <section id="introduction">
+                <h3>1.1 Introducción</h3>
                 <p>Un cuerpo se mueve cuando en el transcurso del tiempo cambia de posición respecto a un punto de referencia que se supone fijo.</p>
                 <p>Para reducir la complejidad y centrarnos en los conceptos básicos del movimiento, en lugar de estudiar el movimiento de cualquier cuerpo, comenzaremos estudiando el movimiento de un <strong>punto material</strong> o <strong>partícula</strong>; con el cual representamos a veces, de modo burdo, a un cuerpo. Y le definimos como un punto geométrico en el que consideramos que está concentrada toda la masa del cuerpo.</p>
                 <p>La <strong>cinemática</strong> es una rama de la física que se encarga de estudiar el movimiento de los cuerpos sin preocuparse por las causas que lo originan. Esencialmente, la cinemática describe cómo se mueven los objetos en el espacio y el tiempo.</p>
@@ -55,7 +56,8 @@
                 <p>En resumen, la cinemática se centra en describir y predecir la posición, la velocidad y la aceleración de los cuerpos en función del tiempo, sin entrar en las fuerzas que provocan dicho movimiento.</p>
                 <p>en las siguientes secciones de este artículo, iremos explicando cada uno de los conceptos que acabamos de enumerar</p>
             </section>
-            <section><h3> 1.2 Movimiento y trayectoria</h3>
+            <section id="motion_and_trajectory">
+                <h3> 1.2 Movimiento y trayectoria</h3>
                 <p>
                     Para determinar la posición de un punto material, es necesario especificar el <strong>sistema de coordenadas</strong> respecto al cual se mide su posición.
                 </p>
@@ -83,7 +85,8 @@
                     Por ejemplo, imaginemos una pelota que cae en línea recta. La trayectoria es una línea vertical. Si encontramos una ecuación s = f(t), que nos diga a qué altura está la pelota en cada segundo, entonces hemos resuelto el problema cinemático para esa pelota.
                 </p>
             </section>
-            <section><h3> 1.3 Vector Desplazamiento</h3>
+            <section id="displacement">
+                <h3> 1.3 Vector Desplazamiento</h3>
                 <p>
                     El instante en el que se inicia el estudio del movimiento de un punto material recibe el nombre de <strong>instante inicial, \(t_0\)</strong>. La posición del punto en dicho instante es la <strong>posición inicial,  \(\vec r_0\)</strong>.
                 </p>
@@ -124,7 +127,8 @@
                     <figcaption><b>Figura 1.2</b> Mostrando la trayectoria de un móvil y su vector desplazamiento entre dos instantes \(t_1\) y \(t_2\) como la diferencia entre los vectores de posición de dichos instantes .</figcaption>
                 </figure>
             </section>
-            <section><h3>1.4 Velocidad</h3>
+            <section id="velocity"><!-- Added id for navigation -->
+                <h3>1.4 Velocidad</h3>
                 <p>
                     Decíamos en la Introducción que en el estudio del movimiento de un punto nos interesa saber en cada instante dónde está y cómo se mueve. El primer objetivo lo conseguimos conociendo la variación temporal del vector posicón \(\vec r\), y para saber cómo se mueve, es decir, qué va a pasar con el punto móvil en instantes sucesivos, introducimos una nueva magnitud llamada <strong>velocidad</strong>.
                 </p>
@@ -187,7 +191,8 @@
                     <div  class="right" id="[1.11]">[1.11]</div>
                 </div>
             </section>
-            <section><h3>1.5 Aceleración</h3>
+            <section id="acceleration"><!-- Added id for navigation -->
+                <h3>1.5 Aceleración</h3>
                 <p>
                     <strong>Aceleración</strong>, en general, es la variación de la velocidad en un intervalo de tiempo. Al ser la velocidad una magnitud vectorial, la aceleración será distinta de cero siempre que la velocidad varíe en su módulo, su dirección o su sentido.
                 </p>
@@ -317,7 +322,8 @@
                 <p>donde \(v\) es la magnitud de la velocidad (celeridad) y \(R\) es el radio de curvatura de la trayectoria en ese punto. Esta componente es siempre no negativa, ya que siempre se requiere un cambio de dirección para el movimiento curvo.</p>
                 <p>Podemos decir que las coordenadas intrínsecas ofrecen una visión intuitiva de cómo la aceleración afecta tanto la velocidad de la partícula como la forma de su trayectoria.</p>
             </section>
-            <section><h3>1.6 Cinemática de algunos tipos de Movimiento</h3>
+            <section id="types_of_motion">
+                <h3>1.6 Cinemática de algunos tipos de Movimiento</h3>
                 <p>Apliquemos los concepto expuestos hasta ahora a algunos de los movimientos más importantes:</p>
                 <ul>
                     <li>Movimiento Rectilíneo Uniforme (MRU).</li>
@@ -326,7 +332,8 @@
                     <li>Movimiento Circular Uniformemente Acelerado</li>
                 </ul>
             </section>
-            <section><h3>1.6.1 Movimiento Rectilíneo Uniforme (MRU)</h3>
+            <section id="mru">
+                <h3>1.6.1 Movimiento Rectilíneo Uniforme (MRU)</h3>
                 <p>Un movimiento es rectilíneo y uniforme cuando su velocidad es constante. Esto supone:</p>
                 <ul>
                     <li>La velocidad es constante en dirección y sentido: la trayectoria es una recta.</li>
@@ -404,7 +411,8 @@
                     </tbody>
                 </table>
             </section>
-            <section><h3>1.6.2 Movimiento Rectilíneo Uniformemente Acelerado</h3>
+            <section id="mrua">
+                <h3>1.6.2 Movimiento Rectilíneo Uniformemente Acelerado</h3>
                 <p>Se llama <strong>rectilíneo y uniformemente acelerado (MRUA)</strong> a aquel movimiento que no tiene aceleración normal y su aceleración tangencial es constante. </p>
 
                 <p>Al no tener aceleración normal, la trayectoria de este movimiento describirá una línea recta. Entonces, si elegimos como sistema de referencia la dirección del movimiento, igual que hicimos en el movimiento rectilíneo y uniforme, todas las magnitudes vectoriales se convierten en escalares.</p>
@@ -443,31 +451,32 @@
 				    <div class="center">$$ \text{tg } \alpha = \frac{dx}{dt} = v_{\text{instantánea}} $$</div>
 				    <div class="right" id="[1.34]">[1.34]</div>
 				</div>
-                    <h4>Resumen de ecuaciones del MRUA</h4>
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Magnitud</th>
-                                <th>Ecuación</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td><strong>Aceleración:</strong></td>
-                                <td>\( a = \text{cte} \)</td>
-                            </tr>
-                            <tr>
-                                <td><strong>Velocidad:</strong></td>
-                                <td>\( v(t) = v_0 + a t \)</td>
-                            </tr>
-                            <tr>
-                                <td><strong>Posición:</strong></td>
-                                <td>\( x(t) = x_0 + v_0 t + \tfrac{1}{2} a t^2 \)</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </section>
-            <section><h3>1.6.3 Movimiento Circular Uniforme (MCU)</h3>
+                <h4>Resumen de ecuaciones del MRUA</h4>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Magnitud</th>
+                            <th>Ecuación</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td><strong>Aceleración:</strong></td>
+                            <td>\( a = \text{cte} \)</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Velocidad:</strong></td>
+                            <td>\( v(t) = v_0 + a t \)</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Posición:</strong></td>
+                            <td>\( x(t) = x_0 + v_0 t + \tfrac{1}{2} a t^2 \)</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+            <section id="mcu">
+                <h3>1.6.3 Movimiento Circular Uniforme (MCU)</h3>
                 <p>El Movimiento Circular Uniforme (MCU) describe el movimiento de un objeto que se desplaza en una trayectoria circular a una <strong>rapidez constante</strong>. Para entender cómo llegamos a la ecuación que define su posición en cualquier momento, partimos de las características clave de su aceleración.</p>
                 <h4><u>Las Aceleraciones en el MCU</u></h4>
                 <p>Como ya sabemos, la aceleración de un objeto en movimiento puede descomponerse en dos componentes intrínsecas: la aceleración tangencial (\(a_t\)) y la aceleración normal (o centrípeta, \(a_n\)).</p>
@@ -590,7 +599,8 @@
                     </tbody>
                 </table>
             </section>
-            <section><h3>1.6.4 Movimiento Circular Uniformemente Acelerado (MCUA)</h3>
+            <section id="mcua">
+                <h3>1.6.4 Movimiento Circular Uniformemente Acelerado (MCUA)</h3>
 
                 <p>El <strong>MCUA</strong> es aquel movimiento de trayectoria circular en el que la aceleración angular se mantiene constante en el tiempo <strong>(\(\alpha = \text{cte} \neq 0\))</strong>. Esto implica que la velocidad angular $\omega$ aumenta o disminuye de manera uniforme.</p>
 
@@ -653,6 +663,33 @@
                         </tr>
                     </tbody>
                 </table>
+            </section>
+            <section id="composicion-movimientos">
+                <h3>1.7 Composición de movimientos</h3>
+
+                <p>Todo movimiento complejo puede descomponerse en tres movimientos independientes situados sobre los ejes cartesianos. De igual manera, la composición de movimientos independientes da lugar a un movimiento único resultante.</p>
+
+                <h4>El principio de superposición</h4>
+                <p>La generalización de esta idea constituye el <strong>principio de superposición</strong>, que establece que si una partícula está sometida simultáneamente a varios movimientos elementales independientes, el movimiento resultante se obtiene sumando vectorialmente dichos movimientos parciales.</p>
+                
+                <p>Para la aplicación práctica de este principio, se deben sumar por separado las siguientes magnitudes vectoriales:</p>
+                <ul>
+                    <li>Posiciones.</li>
+                    <li>Desplazamientos.</li>
+                    <li>Velocidades.</li>
+                    <li>Aceleraciones.</li>
+                </ul>
+
+                <h4>Principio de independencia de Galileo</h4>
+                <p>El principio de superposición tiene su base en el <strong>principio de independencia de Galileo</strong>. Este postula que cuando un punto está dotado de dos movimientos simultáneos, su cambio de posición es independiente de si ambos movimientos actúan de forma sucesiva o simultánea.</p>
+
+                <h4>Aplicaciones prácticas</h4>
+                <p>Este principio permite resolver multitud de problemas cinemáticos concretos, tales como:</p>
+                <ul>
+                    <li>El estudio de un nadador que cruza un río mientras es arrastrado por la corriente.</li>
+                    <li>El análisis del movimiento de un objeto soltado por un pasajero dentro de un vehículo en marcha (tren, ascensor, etc.).</li>
+                    <li>La trayectoria de una pelota lanzada verticalmente que es desviada por el viento.</li>
+                </ul>
             </section>
         </article>
     </body>
