Fix navigation order and update links in index.html

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
         <nav class="lang lang-en" lang="en"> <!--Navigation bar. Links to the site's main sections-->
             <ul>
                 <li><a href="vectors_en.html">1. Vectors</a></li>
-                <li><a href="geometry_en.html">2. Geometry</a></li>
-                <li><a href="kinematics_en.html">3. Kinematics</a></li>
+                <li><a href="kinematics_en.html">2. Kinematics</a></li>
+                <li><a href="geometry_en.html">A1. Geometry</a></li>
             </ul>
         </nav>
     
         <nav class="lang lang-es" lang="es"> <!--Navigation bar. Links to the site's main sections-->
             <ul>
                 <li><a href="vectors_es.html">1. Vectores</a></li>
-                <li><a href="geometry_es.html">2. Geometría</a></li>
                 <li><a href="kinematics_es.html">3. Cinemática</a></li>
+                <li><a href="geometry_es.html">A1. Geometría</a></li>
             </ul>
         </nav>
     
@@ -71,3 +71,4 @@
         </footer>
     </body>    
 </html>
+
