--- a/vectors_es.html
+++ b/vectors_es.html
@@ -610,7 +610,7 @@
                     El valor del ángulo  &phi; es la dirección en la que se impulsa el bote, corresponde con la orientación de \(\vec v_p\) y según <a href="#[1.13]">[1.13]</a>, se calcula como:
                 </p>
                 <p>
-                    &emsp; $$\phi = \arccos\frac{\Vert\vec v_p\Vert\cdot\Vert\vec v_r\Vert}{\vec v_p\cdot\vec v_r}$$
+                    &emsp; $$\phi = \arccos\frac{\Vert\vec v_p\Vert\cdot\Vert\vec v_r\Vert}{\vec v_p\cdot\vec v_r} & $$
                 </p>
                 <p>
                     &emsp; &phi; = <span id="2_1phi1"></span>º
