--- a/vectors_es.html
+++ b/vectors_es.html
@@ -289,7 +289,7 @@
                     Usando <a href="[1.12]">[1.12]</a>, podemos expresar `theta` como.
                 </p>
                 <div class="container">
-                    <div  class="center">$$\theta = \arccos\frac{\Vert\vec v\Vert\cdot\Vert\vec w\Vert}{\vec v\cdot\vec w}$$</div>
+                    <div  class="center">$$\theta = \arccos\frac{\vec v\cdot\vec w}{\Vert\vec v\Vert\cdot\Vert\vec w\Vert}$$</div>
                     <div  class="right" id="[1.13]">[1.13]</div>
                 </div>
                 <p>
@@ -610,7 +610,7 @@
                     El valor del ángulo  &phi; es la dirección en la que se impulsa el bote, corresponde con la orientación de \(\vec v_p\) y según <a href="#[1.13]">[1.13]</a>, se calcula como:
                 </p>
                 <p>
-                    &emsp; $$\phi = \arccos\frac{\Vert\vec v_p\Vert\cdot\Vert\vec v_r\Vert}{\vec v_p\cdot\vec v_r} & $$
+                    &emsp; $$\phi = \arccos\frac{\vec v_p\cdot\vec v_r}{\Vert\vec v_p\Vert\cdot\Vert\vec v_r\Vert} & $$
                 </p>
                 <p>
                     &emsp; &phi; = <span id="2_1phi1"></span>º
