--- a/vectors_es.html
+++ b/vectors_es.html
@@ -13,7 +13,15 @@
 
         <!--Load math.js library https://mathjs.org/ -->
         <script src="https://unpkg.com/mathjs@13.0.0/lib/browser/math.js"></script>
-        
+
+		<script>
+  			window.MathJax = {
+    			tex: {
+      				tags: 'ams'  // 'ams' permite numeración automática y uso de \label / \ref
+    			}
+  			};
+		</script>
+		
         <!-- load Mathjax library-->
         <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 
