Update MathJax script tag for async loading

--- a/vectors_es.html
+++ b/vectors_es.html
@@ -23,7 +23,7 @@
 		</script>
 		
         <!-- load Mathjax library-->
-        <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 
         <!-- loads page script files-->
         <script type="module" src="scripts/vectorsForm.js"></script>
