Update angle calculation format in vectors_es.html

--- a/vectors_es.html
+++ b/vectors_es.html
@@ -618,8 +618,10 @@
                     El valor del ángulo  &phi; es la dirección en la que se impulsa el bote, corresponde con la orientación de \(\vec v_p\) y según <a href="#[1.13]">[1.13]</a>, se calcula como:
                 </p>
                 <p>
-                    &emsp; $$\phi = \arccos\frac{\vec v_p\cdot\vec v_r}{\Vert\vec v_p\Vert\cdot\Vert\vec v_r\Vert} & $$
-                </p>
+					\begin{flalign}
+					\phi = \arccos \left( \frac{\vec v_p \cdot \vec v_r}{\Vert\vec v_p\Vert \cdot \Vert\vec v_r\Vert} \right) \label{eq:mi_angulo} &&
+					\end{flalign}
+				</p>
                 <p>
                     &emsp; &phi; = <span id="2_1phi1"></span>º
                 </p>
