Update angle calculation equation in vectors_es.html

--- a/vectors_es.html
+++ b/vectors_es.html
@@ -619,7 +619,7 @@
                 </p>
                 <p>
 					\begin{flalign}
-					\phi = \arccos \left( \frac{\vec v_p \cdot \vec v_r}{\Vert\vec v_p\Vert \cdot \Vert\vec v_r\Vert} \right) \label{eq:mi_angulo} &&
+					\quad \phi = \arccos \left( \frac{\vec v_p \cdot \vec v_r}{\Vert\vec v_p\Vert \cdot \Vert\vec v_r\Vert} \right) \label{eq:ej_1} &&
 					\end{flalign}
 				</p>
                 <p>
