Add mathematical representation of vector components

--- a/vectors_es.html
+++ b/vectors_es.html
@@ -149,6 +149,11 @@
                 <p>
                     Cuando el punto inicial de un vector coincide con el origen del sistema de coordenadas, llamamos al vector <strong>vector de posición estándar</strong>. Debido a que se sabe que el punto inicial de cualquier vector en posición estándar es (0,0), podemos describir el vector tomando sólo las coordenadas de su punto terminal. Por lo tanto, si el vector \(vec v\) tiene su punto inicial en el origen y su punto terminal en (x, y), escribimos el vector mediante sus componentes como
                 </p>
+				<p>
+					\begin{flalign}
+						\quad \vec v = (x, y) \label{eq:5_1} &&
+					\end{flalign}
+				</p>
                 <div class="container">
                     <div  class="center">\(\vec v = (x, y)\)</div>
                     <div  class="right" id="[1.1]">[1.1]</div>
