Refactor vector display and add magnitude equation
Removed unnecessary container divs and added magnitude equation for vector.

--- a/vectors_es.html
+++ b/vectors_es.html
@@ -154,10 +154,6 @@
 						\quad \vec v = (x, y) \label{eq:5_1} &&
 					\end{flalign}
 				</p>
-                <div class="container">
-                    <div  class="center">\(\vec v = (x, y)\)</div>
-                    <div  class="right" id="[1.1]">[1.1]</div>
-                </div>
                 <p>
                     Cuando un vector se escribe de esta manera, los escalares x e y se denominan <strong>componentes</strong> de \(vec v\). Cuando necesitamos realizar cálculos con vectores, solemos describirlos como vectores de posición estándar porque es más fácil realizar tales cálculos.
                 </p>
@@ -170,6 +166,11 @@
                 <p>
                     Dado un vector de posición \(vec v = (x, y)\), su <strong>magnitud (o módulo)</strong> se calcula mediante       
                 </p>
+				<p>
+					\begin{flalign}
+						\quad \Vert\vec v\Vert\ = \sqrt{x^2+y^2} \label{eq:6_1} &&
+					\end{flalign}
+				</p>
                 <div class="container">
                     <div  class="center">\(\Vert\vec v\Vert\ = \sqrt{x^2+y^2}\)</div>
                     <div  class="right" id="[1.2]">[1.2]</div>
@@ -614,7 +615,7 @@
                     &emsp; \(\vec v_p\) = (<span id="2_1vBoat1"></span>) - (<span id="2_1vRiver1"></span>) = (<span id="2_1vPropelled"></span>) Km/h,
                 </p>
                 <p>
-                    La magnitud del vector \(\vec v_p\) es la velocidad a la que se impulsa el bote, se expresa como \(\Vert\vec v_p\Vert\) y, según <a href="#[1.2]">[1.2]</a>, se calcula como:
+                    La magnitud del vector \(\vec v_p\) es la velocidad a la que se impulsa el bote, se expresa como \(\Vert\vec v_p\Vert\) y, según \eqref{eq:6_1} <a href="#[1.2]">[1.2]</a>, se calcula como:
                 </p>
                 <p>
                     &emsp; \(\Vert\vec v_p\Vert = \sqrt{v_x^2 + v_y^2} = \sqrt{9^2 + 36^2} = \sqrt{81+1296} = \sqrt {1377}\) = <span id="2_1normvPropelled"></span> Km/h.
