Remove unnecessary div elements and clean up text

--- a/vectors_es.html
+++ b/vectors_es.html
@@ -171,10 +171,6 @@
 						\quad \Vert\vec v\Vert\ = \sqrt{x^2+y^2} \label{eq:6_1} &&
 					\end{flalign}
 				</p>
-                <div class="container">
-                    <div  class="center">\(\Vert\vec v\Vert\ = \sqrt{x^2+y^2}\)</div>
-                    <div  class="right" id="[1.2]">[1.2]</div>
-                </div>
                 <p>
                     Y su <strong>dirección</strong> se calcula mediante
                 </p>
@@ -615,7 +611,7 @@
                     &emsp; \(\vec v_p\) = (<span id="2_1vBoat1"></span>) - (<span id="2_1vRiver1"></span>) = (<span id="2_1vPropelled"></span>) Km/h,
                 </p>
                 <p>
-                    La magnitud del vector \(\vec v_p\) es la velocidad a la que se impulsa el bote, se expresa como \(\Vert\vec v_p\Vert\) y, según \eqref{eq:6_1} <a href="#[1.2]">[1.2]</a>, se calcula como:
+                    La magnitud del vector \(\vec v_p\) es la velocidad a la que se impulsa el bote, se expresa como \(\Vert\vec v_p\Vert\) y, según \eqref{eq:6_1}, se calcula como:
                 </p>
                 <p>
                     &emsp; \(\Vert\vec v_p\Vert = \sqrt{v_x^2 + v_y^2} = \sqrt{9^2 + 36^2} = \sqrt{81+1296} = \sqrt {1377}\) = <span id="2_1normvPropelled"></span> Km/h.
