--- a/vectors_es.html
+++ b/vectors_es.html
@@ -151,7 +151,7 @@
                 </p>
 				<p>
 					\begin{flalign}
-						\quad \vec v = (x, y) \label{eq:5_1} &&
+						\vec v = (x, y) \label{eq:5_1}
 					\end{flalign}
 				</p>
                 <p>
@@ -168,12 +168,17 @@
                 </p>
 				<p>
 					\begin{flalign}
-						\quad \Vert\vec v\Vert\ = \sqrt{x^2+y^2} \label{eq:6_1} &&
+						\Vert\vec v\Vert\ = \sqrt{x^2+y^2} \label{eq:6_1}
 					\end{flalign}
 				</p>
                 <p>
                     Y su <strong>dirección</strong> se calcula mediante
                 </p>
+				<p>
+					\begin{flalign}
+						\theta = \arctan (y/x) \label{eq:6_2}
+					\end{flalign}
+				</p>
                 <div class="container">
                     <div  class="center">\(\theta = \arctan (y/x)\)</div>
                     <div  class="right" id="[1.3]">[1.3]</div>
@@ -181,6 +186,11 @@
                 <p>
                     Dadas la magnitud y dirección de un vector \(vec v\), su <strong>componente x</strong> se calcula   mediante
                 </p>
+				<p>
+					\begin{flalign}
+						x = \Vert\vec v\Vert\cos\theta \label{eq:6_3}
+					\end{flalign}
+				</p>
                 <div class="container">
                     <div  class="center">\(x = \Vert\vec v\Vert\cos\theta\)</div>
                     <div  class="right" id="[1.4]">[1.4]</div>
@@ -188,6 +198,11 @@
                 <p>
                     y su <strong>componente y</strong> se calcula   mediante
                 </p>
+				<p>
+					\begin{flalign}
+						y = \Vert\vec v\Vert\sin\theta \label{eq:6_4}
+					\end{flalign}
+				</p>
                 <div class="container">
                     <div  class="center">\(y = \Vert\vec v\Vert\sin\theta\)</div>
                     <div  class="right" id="[1.5]">[1.5]</div>
@@ -716,7 +731,7 @@
                     Para resolver este ejercicio, utilicemos las noción de <a href="#Componentes de un Vector">componentes de un vector</a> y la <a href="#Relación entre las componentes de un vector, su módulo y su dirección">relación entre las componentes de un vector, su módulo y su dirección</a>.
                 </p>
                 <p >
-                    Entonces calculamos el valor de la componente \(\vec V_x\) de \(\vec V\) mediante la expresión <a href="#[1.4]">[1.4]</a>, el valor de \(\vec V_y\) mediante la expresión <a href="#[1.5]">[1.5]</a>. Siendo \(\Vert\vec V\Vert\) = 4 km/h y &theta; = 67.5º`.
+                    Entonces calculamos el valor de la componente \(\vec V_x\) de \(\vec V\) mediante la expresión \eqref{eq:6_3} <a href="#[1.4]">[1.4]</a>, el valor de \(\vec V_y\) mediante la expresión \eqref{eq:6_4} <a href="#[1.5]">[1.5]</a>. Siendo \(\Vert\vec V\Vert\) = 4 km/h y &theta; = 67.5º`.
                 </p>
                 <p>&emsp; \(\vec V_x = 4\cdot\cos 65,7º\)= <span id="2_3Vx"></span> km/h</p>
                 <p>&emsp; \(\vec V_y = 4\cdot\sin65,7º\)= <span id="2_3Vy"></span> km/h</p>
@@ -739,7 +754,7 @@
                     Un objeto se mueve de tal manera que su velocidad en un instante determinado es de <span id="2_4Speed1"></span> m/s y forma un ángulo de <span id="2_4orientation1"></span>º con la horizontal. Halla las componentes horizontal y vertical de la velocidad. Expresa el vector velocidad en función de sus componentes.
                 </p>
                 <p>
-                    The formulas to calculate the components of a vector \(\vec v\) given its magnitude \(\Vert\vec v\Vert\) and direction &theta; vienen definidas por las expresiones <a href="#[1.4]">[1.4]</a> y <a href="#[1.5]">[1.5]</a>:
+                    The formulas to calculate the components of a vector \(\vec v\) given its magnitude \(\Vert\vec v\Vert\) and direction &theta; vienen definidas por las expresiones \eqref{eq:6_3} <a href="#[1.4]">[1.4]</a> y \eqref{eq:6_4} <a href="#[1.5]">[1.5]</a>:
                 </p>
                 <p>&emsp; \(\vec v_x = \Vert\vec v\Vert\\cos \theta \cdot\vec i\) </p>
                 <p>&emsp; \(\vec v_y = \Vert\vec v\Vert\\sin \theta \cdot\vec j\) </p>
